# company-specific-settings

./: .gitignore  README.md  license.txt  pyproject.toml
company_specific_settings/: hooks.py  modules.txt  patches.txt
company_specific_settings/company_specific_settings/: api.py  printing.py  request.py  rules.py  test_printing.py  test_request.py
company_specific_settings/company_specific_settings/doctype/company_specific_field/: company_specific_field.json  company_specific_field.py
company_specific_settings/company_specific_settings/doctype/company_specific_rule/: company_specific_rule.js  company_specific_rule.json  company_specific_rule.py  test_company_specific_rule.py
company_specific_settings/config/: desktop.py
company_specific_settings/public/js/: company_specific_settings.js
