[build-system]
requires = ["flit_core>=3.4,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "company_specific_settings"
authors = [{name = "Norwa Africa"}]
description = "Company-scoped print formats and custom fields for Frappe/ERPNext"
requires-python = ">=3.10"
dynamic = ["version"]
dependencies = []

[tool.ruff]
line-length = 110
target-version = "py310"

